registry data model updated, vulnarable package patches, fog status job logic updated, fog used token cleanup service moved under jobs
