# src/schemas/registry.js
@@ -23,9 +23,7 @@ const registryCreate = {
       'type': 'string',
       'pattern': '^(([^<>()\\[\\]\\\\.,;:\\s@"]+(\\.[^<>()\\[\\]\\\\.,;:\\s@"]+)*)|(".+"))@((\\[[0-9]{1,3}\\.[0-9]{1,3}' +
       '\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$'
-    },
-    'requiresCert': { 'type': 'boolean' },
-    'certificate': { 'type': 'string' }
+    }
   },
   'required': ['url', 'isPublic', 'username', 'password', 'email'],
   'additionalProperties': true
@@ -53,9 +51,7 @@ const registryUpdate = {
       'type': 'string',
       'pattern': '^(([^<>()\\[\\]\\\\.,;:\\s@"]+(\\.[^<>()\\[\\]\\\\.,;:\\s@"]+)*)|(".+"))@((\\[[0-9]{1,3}\\.[0-9]{1,3}' +
       '\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$'
-    },
-    'requiresCert': { 'type': 'boolean' },
-    'certificate': { 'type': 'string' }
+    }
   },
   'additionalProperties': true
 }
